--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h3>Project</h3>
+    <a href="temp1.html">temp1</a>
+    <a href="temp2.html">temp2</a>
+    <a href="temp3.html">temp3</a>
 </body>
 </html>
