--- a/temp7.html
+++ b/temp7.html
@@ -38,14 +38,16 @@
             color: #eee;
             width: 200px;
             height: 30px;
-            border-radius: 10px;
+            border-width: 1px;
+            border-radius: 5px;
         }
         .inbox{
             width: 250px;
-            height: 30px;
+            height: 40px;
+            border-width: 1px;
             border-radius: 5px;
         }
-    </style>
+    </style> 
 </head>
 <body>
     <div class="container">
@@ -55,7 +57,7 @@
     </div>
     <div class="login">
     <form>
-        <input type="text" size="50px" placeholder="Email address or phone number" class="inbox"><br><br>
+        <input type="email" size="50px" placeholder="Email address or phone number" class="inbox"><br><br>
         <input type="password" placeholder="password" size="50px" class="inbox"><br><br>
         <button class="btn-login inbox" >Log in</button><br><br>
         <button><a href="#">Forgotten password</a></button><br><br>
