--- a/temp16.html
+++ b/temp16.html
@@ -9,18 +9,44 @@
         let useremail=""
         let username=""
         let currBalance=0
+        function saveData(){
+            let amount=Number(document.getElementById("amount").value)
+            let type=document.getElementById("type").value
+            for(let i=0;i<users.length;i++){
+                if(users[i].email==useremail){
+                    if(type=="1"){
+                        users[i].balance+=amount
+                    }
+                    else if(type=="2"){
+                        if(users[i].balance>=amount){
+                        users[i].balance-=amount
+                        }
+                        else{
+                            alert("Insufficient Balance!");
+                            
+                        }
+                    }
+                    else if(type=="3"){
+                        
+                    }
+                    spBalance.innerHTML = users[i].balance
+                    break
+                }
+            }
+        }
         function home(){
             str=`
                 <h2>Welcome!!! ${username}</h2>
                 <p><button onclick="showLogin()">LogOut</button></p>
-                <p><input type="number" placeholder="Enter Amount"></p>
+                <p><input type="number" id="amount" placeholder="Enter Amount"></p>
                 <p><select id="type">
                     <option value=0>--Select--</option>
                     <option value=1>--Deposit--</option>
                     <option value=2>--Withdraw--</option>
+                    <option value=3>--fund transfer--</option>
                 </select></p>
-                <button>Submit</button>
-                <p>current Balance ${currBalance}</p>
+                <button onclick="saveData()">Submit</button>
+                <p>current Balance <span id="spBalance">${currBalance}</span></p>
             `;
             root.innerHTML=str;
         }
