--- a/temp4.html
+++ b/temp4.html
@@ -41,7 +41,7 @@
     </audio>
     <hr/>
     <!-- svg->scalable vector graphics -->
-     <table border="1">
+     <table boder="1">
     <tr>
         <th>Name</th>
         <th>Place</th>
