--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <a href="temp1.html">temp1</a>
     <a href="temp2.html">temp2</a>
     <a href="temp3.html">temp3</a>
+    <a href="temp4.html">temp1</a>
+    <a href="temp5.html">temp2</a>
+    <a href="temp6.html">temp3</a>
+    <a href="temp7.html">temp1</a>
+    <a href="temp8.html">temp2</a>
+    <a href="temp9.html">temp3</a>
 </body>
 </html>
