--- a/temp22.html
+++ b/temp22.html
@@ -49,7 +49,7 @@
         font-size: 20px;
         padding: 5px;
         border-radius: 2px;
-        width: 200px;
+        width: 150px;
         border: none;
         margin: 5px;
       }
@@ -88,27 +88,95 @@
           <div class="caption">It's quick and easy.</div>
         </div>
       </div>
-      <hr>
-    <div id="root"></div>
+      <hr />
+      <div id="root"></div>
     </div>
     <script>
+      const months = [
+        "Jan",
+        "Feb",
+        "Mar",
+        "Apr",
+        "May",
+        "Jun",
+        "Jul",
+        "Aug",
+        "Sep",
+        "Oct",
+        "Nov",
+        "Dec",
+      ];
+      let firstname = "";
+      let surname = "";
+      let email = "";
+      let password = "";
+      let gender = 0;
+      let dd = null;
+      let mm;
+      let yy;
+      let pronoun;
+      let g = "";
       const showData = () => {
-        let firstname = document.getElementById("firstname").value;
-        let surname = document.getElementById("surname").value;
+        firstname = document.getElementById("firstname").value;
+        surname = document.getElementById("surname").value;
+        email = document.getElementById("email").value;
+        password = document.getElementById("password").value;
+        gender = document.getElementsByName("gender");
+        pronoun = document.getElementById("prSelect").value;
+        dd = Number(document.getElementById("day").value);
+        mm = Number(document.getElementById("month").value);
+        yy = Number(document.getElementById("year").value);
+        console.log(dd, mm, yy);
+        let dob = `${dd}-${months[mm]}-${yy}`;
+        g = "";
+        if (gender[0].checked) g = "Female";
+        if (gender[1].checked) g = "Male";
+        if (gender[2].checked) g = pronoun;
         let str = `
-        <div>
-          Name:${firstname} ${surname}
+          <h3>Verify your information</h3>
+          <p>Name:${firstname} ${surname}</p>
+          <p>Email:${email}</p>
+          <p>Password:${password}</p>
+          <p>Gender:${g}</p>
+          <p>Date of Birth:${dob}</p>
+          <button>Confirm</button>
+          <button onclick=showForm()>Edit</button>
         </div>
         `;
         root.innerHTML = str;
+      };
+
+      const f1 = () => {
+        let str = "";
+        let dt = new Date();
+        let d = dd ?? dt.getDate();
+        let m = mm ?? dt.getMonth();
+        let y = yy ?? dt.getFullYear();
+        if (pronoun != "NA") prSelect.style.display = "block";
+        for (let i = 1; i <= 31; i++) {
+          str += `<option ${i === d && "selected"}>${i}</option>`;
+        }
+        day.innerHTML = str;
+        str = "";
+        for (let i = 0; i <= 11; i++) {
+          str += `<option value=${i} ${i === m && "selected"}>${
+            months[i]
+          }</option>`;
+        }
+        month.innerHTML = str;
+        str = "";
+        for (let i = 1905; i <= 2025; i++) {
+          str += `<option ${i === y && "selected"}>${i}</option>`;
+        }
+        year.innerHTML = str;
       };
 
       const showForm = () => {
         let str = `
       
       <div class="row">
-        <input type="text" id="firstname" placeholder="Firstname" />
-        <input type="text" id="surname" placeholder="Surname" />
+        <input type="text" id="firstname" value='${firstname}' placeholder="Firstname" />
+        <input type="text" id="surname" value='${surname}' placeholder="Surname" />
       </div>
       <div class="row" style="justify-content: start">
         <div class="leftCaption">
@@ -132,57 +200,62 @@
       <div class="row">
         <div class="radioClass">
           <div><label> Female</label></div>
-          <div><input type="radio" name="gender" onclick="togglePronoun()" /></div>
+          <div><input type="radio" ${
+            g === "Female" && "checked"
+          } name="gender" onclick="togglePronoun()" /></div>
         </div>
         <div class="radioClass">
           <div><label> Male</label></div>
-          <div><input type="radio" name="gender" onclick="togglePronoun()" /></div>
+          <div><input type="radio" ${
+            g === "Male" && "checked"
+          } name="gender" onclick="togglePronoun()" /></div>
         </div>
         <div class="radioClass">
           <div><label> Custom</label></div>
-          <div><input type="radio" name="gender" onclick="togglePronoun()" /></div>
+          <div><input type="radio" ${
+            pronoun != "NA" && "checked"
+          } name="gender" onclick="togglePronoun()" /></div>
         </div>
       </div>
 
      <div class="row">
       <select id="prSelect" style="display:none">
-        <option>Select your pronoun</option>
-        <option>She:"Wish her a happy birthday"</option>
-        <option>He:"Wish him a happy birthday"</option>
-        <option>They:"Wish them a happy birthday"</option>
+        <option value="NA" >Select your pronoun</option>
+        <option value="She" >She:"Wish her a happy birthday"</option>
+        <option value="He">He:"Wish him a happy birthday"</option>
+        <option value="They" >They:"Wish them a happy birthday"</option>
       </select>
      </div>
 
       <div class="row">
-        <input type="text" placeholder="Mobule number or email address" />
+        <input type="text" value='${email}' id="email" placeholder="Mobule number or email address" />
       </div>
       <div class="row">
-        <input type="password" placeholder="New password" />
+        <input type="password" value='${password}' id="password" placeholder="New password" />
+        <img src="assets/images/eye-hide.png" id='toggleEye' onclick='togglePwd()' width="40px">
       </div>
       <div class="row">
         <button onclick='showData()'>Sign Up</button>
       </div>
       `;
         root.innerHTML = str;
+        f1();
       };
 
       showForm();
-      let str = "";
-      for (let i = 1; i <= 31; i++) {
-        str += `<option>${i}</option>`;
-      }
-      day.innerHTML = str;
-      str = "";
-      for (let i = 1; i <= 12; i++) {
-        str += `<option>${i}</option>`;
-      }
-      month.innerHTML = str;
-      str = "";
-      for (let i = 1905; i <= 2025; i++) {
-        str += `<option>${i}</option>`;
-      }
-      year.innerHTML = str;
 
+      const togglePwd = () => {
+        let pwd = document.getElementById("password");
+        if (pwd.type === "password") {
+          document.getElementById("toggleEye").src =
+            "s_eye.jpg";
+          pwd.type = "text";
+        } else {
+          document.getElementById("toggleEye").src =
+            "h-eye.jpg";
+          pwd.type = "password";
+        }
+      };
       const togglePronoun = () => {
         let p = document.getElementsByName("gender");
         if (p[2].checked) {
