--- a/temp21.html
+++ b/temp21.html
@@ -75,15 +75,6 @@
         border-radius: 5px;
         padding: 3px;
       }
-      .checkBox{
-        border: 1px solid gray;
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-        margin: 5px;
-        border-radius: 5px;
-        padding: 3px;
-      }
     </style>
   </head>
   <body>
@@ -123,8 +114,11 @@
       let dd = null;
       let mm;
       let yy;
-      let pronoun;
+      let pronoun = "NA";
       let g = "";
+      let movies;
+      let music;
+      let sports;
       const showData = () => {
         firstname = document.getElementById("firstname").value;
         surname = document.getElementById("surname").value;
@@ -135,7 +129,13 @@
         dd = Number(document.getElementById("day").value);
         mm = Number(document.getElementById("month").value);
         yy = Number(document.getElementById("year").value);
-        console.log(dd, mm, yy);
+        sports = document.getElementById("sports").checked;
+        music = document.getElementById("music").checked;
+        movies = document.getElementById("movies").checked;
+        let strInterests = "";
+        if (sports) strInterests += "Sports ";
+        if (music) strInterests += "Music ";
+        if (movies) strInterests += "Movies ";
         let dob = `${dd}-${months[mm]}-${yy}`;
         g = "";
         if (gender[0].checked) g = "Female";
@@ -148,6 +148,7 @@
           <p>Password:${password}</p>
           <p>Gender:${g}</p>
           <p>Date of Birth:${dob}</p>
+          <p>Interests:${strInterests}</p>
           <button>Confirm</button>
           <button onclick=showForm()>Edit</button>
         </div>
@@ -199,6 +200,7 @@
         <select id="month"></select>
         <select id="year"></select>
       </div>
+
       <div class="row" style="justify-content: start">
         <div class="leftCaption">
           Gender<span class="qMark"
@@ -226,42 +228,49 @@
           } name="gender" onclick="togglePronoun()" /></div>
         </div>
       </div>
+
       <div class="row" style="justify-content: start">
         <div class="leftCaption">
-          Intrest<span class="qMark"
+          Interests<span class="qMark"
             ><abbr title="Click for more information">?</abbr></span
           >
         </div>
       </div>
-      
+
+
+      <div class="row">
+        <div class="radioClass">
+          <div><label> Movies</label></div>
+          <div><input type="checkbox" ${movies && "checked"} id='movies'/></div>
+        </div>
+        <div class="radioClass">
+          <div><label> Music</label></div>
+          <div><input type="checkbox" ${music && "checked"} id='music'/></div>
+        </div>
+        <div class="radioClass">
+          <div><label>Sports</label></div>
+          <div><input type="checkbox" ${sports && "checked"} id='sports' /></div>
+        </div>
+      </div>
+
+
      <div class="row">
       <select id="prSelect" style="display:none">
         <option value="NA" >Select your pronoun</option>
-        <option value="She" >She:"Wish her a happy birthday"</option>
+        <option value="She" ${
+          pronoun == "She" && "selected"
+        }>She:"Wish her a happy birthday"</option>
         <option value="He">He:"Wish him a happy birthday"</option>
         <option value="They" >They:"Wish them a happy birthday"</option>
       </select>
      </div>
-     <div class="row">
-        <div class="checkBox">
-            <div><label>Music</label></div>
-            <div><input type="checkbox"></div>
-        </div>
-        <div class="checkBox">
-            <div><label>Movies</label></div>
-            <div><input type="checkbox"></div>
-        </div>
-        <div class="checkBox">
-            <div><label>Painting</label></div>
-            <div><input type="checkbox"></div>
-        </div>
-      </div>
+
       <div class="row">
         <input type="text" value='${email}' id="email" placeholder="Mobule number or email address" />
       </div>
       <div class="row">
         <input type="password" value='${password}' id="password" placeholder="New password" />
-        <img src="h-eye.jpg" id='toggleEye' onclick='togglePwd()' width="40px">
+        <img src="assets/images/eye-hide.png" id='toggleEye' onclick='togglePwd()' width="40px">
       </div>
       <div class="row">
         <button onclick='showData()'>Sign Up</button>
@@ -277,11 +286,11 @@
         let pwd = document.getElementById("password");
         if (pwd.type === "password") {
           document.getElementById("toggleEye").src =
-            "s_eye.jpg";
+            "assets/images/eye-show.jpg";
           pwd.type = "text";
         } else {
           document.getElementById("toggleEye").src =
-            "h-eye.jpg";
+            "assets/images/eye-hide.jpg";
           pwd.type = "password";
         }
       };
@@ -291,6 +300,7 @@
           prSelect.style.display = "block";
         } else {
           prSelect.style.display = "none";
+          pronoun = "NA";
         }
       };
     </script>
